modify todo api

--- a/app/views/todo/index.html.slim
+++ b/app/views/todo/index.html.slim
@@ -1,2 +1,6 @@
 h1 Todo#index
 p Find me in app/views/todo/index.html.slim
+
+todo-app
+/ = stylesheet_pack_tag 'todo/todo_app'
+= javascript_pack_tag 'todo/todo_app'
