--- a/app/views/todo/vuex.html.slim
+++ b/app/views/todo/vuex.html.slim
@@ -1,4 +1,5 @@
 h1 Todo Vuex Sample
+a(href="/") go to non-Vuex version
 todo-app
 / = stylesheet_pack_tag 'todo/todo_app'
 = javascript_pack_tag 'todo_vuex/todo_app'
